<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimaryLight"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <Button
        android:id="@+id/file_maintenance"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryLight"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/file_maintenance" />

    <Button
        android:id="@+id/forecast_technique"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryLight"
        android:layout_gravity="center"
        android:layout_marginTop="39dp"
        android:text="@string/forecast_technique" />

    <Button
        android:id="@+id/report_generation"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryLight"
        android:layout_gravity="center"
        android:layout_marginTop="39dp"
        android:text="@string/report_generation" />

    <Button
        android:id="@+id/help"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryLight"
        android:layout_gravity="center"
        android:layout_marginTop="39dp"
        android:layout_marginBottom="20dp"
        android:text="@string/help" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>