<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:background="@color/colorPrimaryLight"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ForecastActivity">




    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_light_background">

        <com.jjoe64.graphview.GraphView
            android:id="@+id/scatterPlot"
            android:layout_width="match_parent"
            android:layout_height="350dp" />

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/btnAddPt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/cardView"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/add_point" />

    <EditText
        android:id="@+id/numX"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/cardView"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="@string/x"
        android:inputType="numberSigned"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/numY"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/numX"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="@string/y"
        android:inputType="numberSigned"
        android:textAlignment="center" />


</RelativeLayout>
</ScrollView>