<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimaryLight"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--File Maintenance-->
            <android.support.v7.widget.CardView
                android:layout_marginBottom="@dimen/card_view_layout_padding"
                android:layout_marginTop="@dimen/card_view_layout_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_marginBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/movie_title"
                        android:layout_marginLeft="@dimen/layout_margin_left"
                        android:layout_marginStart="@dimen/layout_margin_left"
                        android:text="File Maintenance"
                        android:textAlignment="center"
                        android:layout_marginTop="@dimen/layout_margin_top2"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_big" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/title"
                        android:text="@string/file_sub"
                        android:layout_marginStart="@dimen/layout_margin_left"
                        android:layout_marginRight="@dimen/layout_margin_left"
                        android:layout_marginEnd="@dimen/layout_margin_left"
                        android:layout_marginTop="@dimen/layout_margin_top"
                        android:textSize="@dimen/text_medium" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!--Forecast Technique-->
            <android.support.v7.widget.CardView
                android:layout_marginBottom="@dimen/card_view_layout_padding"
                android:layout_marginTop="@dimen/card_view_layout_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_marginBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/plot"
                        android:layout_marginLeft="@dimen/layout_margin_left"
                        android:layout_marginStart="@dimen/layout_margin_left"
                        android:text="Forecast Technique"
                        android:textAlignment="center"
                        android:layout_marginTop="@dimen/layout_margin_top2"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_big" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/plot_synopsis"
                        android:text="@string/forecast_sub"
                        android:layout_marginLeft="@dimen/layout_margin_left"
                        android:layout_marginStart="@dimen/layout_margin_left"
                        android:layout_marginRight="@dimen/layout_margin_left"
                        android:layout_marginEnd="@dimen/layout_margin_left"
                        android:layout_marginTop="@dimen/layout_margin_top"
                        android:textSize="@dimen/text_medium" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!--Report Generation-->
            <android.support.v7.widget.CardView
                android:layout_marginBottom="@dimen/card_view_layout_padding"
                android:layout_marginTop="@dimen/card_view_layout_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_marginBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/rating"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/layout_margin_left"
                        android:layout_marginStart="@dimen/layout_margin_left"
                        android:layout_marginTop="@dimen/layout_margin_top2"
                        android:text="Report Generation"
                        android:textAlignment="center"
                        android:textSize="@dimen/text_big"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/user_rating"
                        android:text="@string/help_sub"
                        android:paddingLeft="@dimen/layout_margin_left"
                        android:paddingRight="@dimen/layout_margin_left"
                        android:paddingStart="@dimen/layout_margin_left"
                        android:layout_marginTop="@dimen/layout_margin_top2"
                        android:textSize="@dimen/text_medium" />
                </LinearLayout>
            </android.support.v7.widget.CardView>



        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>



</RelativeLayout>